test/syc/bad/cexprnc.c
/*
 * Expression is not constant.
 */

int x;

enum {
	e1 = x
};
